test/resources/typer/failing/FunctionCalls1.amy
object FunctionCall
  def foo(i: Int(32)): Boolean = i < 0 end foo
  
  foo(true)
end FunctionCall
